vendor/tt-call/tests/ui/type-dyn-eof.stderr
error: no rules expected the token `dyn`
 --> tests/ui/type-dyn-eof.rs:5:16
  |
5 |     input = [{ dyn }]
  |                ^^^ no rules expected this token in macro call
  |
  = note: while trying to match end of macro
